# contracts/openapi.json
@@ -2459,6 +2459,34 @@
         ]
       }
     },
+    "/api/v1/modules": {
+      "get": {
+        "tags": [
+          "Framework"
+        ],
+        "operationId": "GetModules",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": {
+                    "type": "boolean"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "Bearer": [ ]
+          }
+        ]
+      }
+    },
     "/api/v1/jobs/maintenance": {
       "post": {
         "tags": [
